# freetypybind

./: .gitignore  LICENSE.txt  README.rst  pyproject.toml  setup.py  setupext.py
ext/: _ft2.cpp  _layout.cpp  _layout.h  _p11x_enum.h  _sfnt_tables.cpp  _util.h
lib/freetypybind/: _x_mac_hebrew.py  query_face.py
scripts/: inspect_face.py
src/: _ft2.cpp  _ft2.h  _layout.cpp  _sfnt_tables.cpp  _sfnt_tables.h  _util.h
src/freetypybind/: __init__.py  query_face.py
