[build-system]
requires = [
    "pybind11>=2.6",
    "setuptools>=61",
    "setuptools_scm[toml]>=6.2",
]
build-backend = "setuptools.build_meta"

[project]
name = "freetypybind"
description = ""
readme = "README.rst"
authors = [{name = "Antony Lee"}]
urls = {Repository = "https://github.com/anntzer/freetypybind"}
license = {text = "zlib"}
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: zlib/libpng License",
    "Programming Language :: Python :: 3",
]
dynamic = ["version"]

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "node-and-date"
fallback_version = "0+unknown"

[tool.coverage.run]
branch = true
source_pkgs = ["freetypybind"]

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "error::DeprecationWarning:freetypybind",
]
